--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@next/third-parties": "^14.2.13",
+    "axios": "^1.8.1",
+    "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-slick": "^0.30.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
